--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-
+            <a href="./recipes/choc-chip-cookies.html">Chocolate Chip Cookies</a>
+            
     </body>
 
 
 
-</html>
+</html>Odin Recipes
