--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-            <a href="./recipes/choc-chip-cookies.html">Chocolate Chip Cookies</a>
-        
+            <ul>
+                <li><a href="./recipes/choc-chip-cookies.html">Chocolate Chip Cookies</a></li>
+                <li><a href="./recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
+                <li><a href="./recipes/water.html">Glass of Water</a></li>
+            </ul>
     </body>
 
-</html>Odin Recipes
+</html>
