Create style.css and link styles to index and recipes

--- a/recipes/water.html
+++ b/recipes/water.html
@@ -4,25 +4,26 @@
     <head>
         <meta charset="utf-8">
         <title>Glass of Water</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Glass of Water</h1>
-        <img src="https://www.nicepng.com/png/detail/312-3121224_water-cup-png-pic-glass-of-water.png" width= 350 height= 500 alt="Water Cup Png Pic - Glass Of Water@nicepng.com">
+        <h1 class="recipe-name">Glass of Water</h1>
+        <img class="recipe-image" src="https://www.nicepng.com/png/detail/312-3121224_water-cup-png-pic-glass-of-water.png" width= auto height= 500 alt="Water Cup Png Pic - Glass Of Water@nicepng.com">
     
-        <h2>Description</h2>
+        <h2 class="recipe-desc">Description</h2>
             <p>Yes, this is a recipe for preparing a glass of water.
 
             <p><strong><em>Refreshing</em></strong> dihydrogen monoxide; you can't get better than that.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="recipe-ingred">Ingredients</h2>
             <ul>
                 <li>1 glass to hold your H2O</li>
                 <li>A water source, e.g. your tap.</li>
             </ul>
   
 
-        <h2>Steps</h2>
+        <h2 class ="recipe-instruct">Instructions</h2>
             <ol>
                 <li>Fill up your glass with water and enjoy.</li>
                 <li>There is no step 2.</li>
