--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title Recipe Website></title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="homepage-title">Really Good Recipes</h1>
             <ul>
-                <li><a href="./recipes/choc-chip-cookies.html">Chocolate Chip Cookies</a></li>
+                <li><a class="recipe-list" href="./recipes/choc-chip-cookies.html">Chocolate Chip Cookies</a></li>
                 <li><a href="./recipes/grilled-cheese-sandwich.html">Grilled Cheese Sandwich</a></li>
                 <li><a href="./recipes/water.html">Glass of Water</a></li>
             </ul>
